--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -83,13 +83,18 @@
             border-bottom-right-radius: 0;
             border-bottom-left-radius: 0;
         }
+
+        .crop img {
+            width: 200px;
+            height: 400px;
+            margin: -75px 0 0 -100px;
+        }
     </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-
 
 <nav class="site-header sticky-top py-1">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
@@ -107,13 +112,19 @@
 <div class="container">
     <div class="jumbotron">
 <main>
+    <p><div class="crop">
+<img width="280" height="280" src=" https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/67379991_2393631050959157_1310575099614593024_n.jpg?_nc_cat=103&_nc_oc=AQmO_hwgo7AUTwNz34M-LrdYIvTLnfeTQ_OgQemJXvTPi9F36-UUcWhJF_yrCAm26VA&_nc_ht=scontent-iad3-1.xx&oh=ee7fac1292db1e899aefa04ff1ced1cb&oe=5E38CC64" class="card-img-top" alt="...">
+    July 20th 2019 in DC
+    </div></p>
+    <p>My first marching perforance on July 4th in DC.</p>
 
-
-
-
-
+    <p>I joined the band on July 1st 2015</p>
 </main>
-    </div></div>
+
+
+
+
+
 
 
 
